# autostatus

./: INSTALL  Makefile.in  NEWS  README  TODO  acconfig.h  autostatus.in  conf.sample  config.h.in  configure  configure.in  fileserv.pl.in  hosts.sample  tcpcheck.c
icons/: README.icons
